[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_workshop"
description = "A simulated annealing process to determine the optimal weight values of an artificial neuron."
authors = [
    { name = "Austin Hester", email = "ahester57@gmail.com" },
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education :: Testing"
]
requires-python = ">=3.8"
dependencies = [
    "keras>=3.1.1,<4",
    "matplotlib>=3.8.3,<4",
    "networkx>=3.2.1,<4",
    "numpy>=1.26.4,<2",
    "pandas>=2.2.1,<3",
    "scikit-learn>=1.4.1,<2",
    "scipy>=1.12.0,<2",
    "seaborn>=0.13.2,<1",
    "tomli==2.0.1; python_version<'3.11'",
    "torch>=2.2.1,<3",
    "torchvision>=0.17.1,<1"
]
dynamic = ["version", "readme"]

[project.urls]
"Homepage" = "https://github.com/ahester57/ai_workshop"

[project.scripts]
aiw = "ai_workshop.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1,<8",
    "pytest-cov>=3.1.0,<4"
]
jupyter = [
    "notebook>=7.1.1,<8"
]

[tool.setuptools.dynamic]
version = {attr = "ai_workshop.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["src"]
